fix: remove extra margin

--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,6 @@
   }
 
   .partner-text {
-    margin-bottom: 50px;
     margin-top: 10px;
     font-size: 12px;
   }
